<resources>
    <string name="app_name">CollegeCampusApp</string>
    <string name="registration_number">Registration Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="college_logo">College Logo</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="course">Course</string>
    <string name="year">Year</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="username">username</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_course">Edit Course</string>
    <string name="edit_year">Edit Year</string>
    <string name="edit_mobile">Edit Mobile</string>
    <string name="edit_email">Edit Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_course">Enter Course</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="student_name">Student Name</string>
    <string name="timetable">Timetable</string>
    <string name="view_your_class_schedule">View your class schedule</string>
    <string name="result">Result</string>
    <string name="check_your_academic_results">Check your academic results</string>
    <string name="calendar">Calendar</string>
    <string name="important_dates_and_events">Important dates and events</string>
    <string name="notification_news">Notification_News</string>
    <string name="college_news_and_notifications">College news and notifications</string>
    <string name="faculty_member">Faculty Member</string>
    <string name="contact_faculty_members">Contact faculty members</string>
    <string name="hostel_application">Hostel Application</string>
    <string name="syllabus">Syllabus</string>
    <string name="course_syllabus_details">Course syllabus details</string>
    <string name="apply_for_hostel_accommodation">Apply for hostel accommodation</string>
    <string name="todo">TODO</string>
    <string name="schedule">Schedule</string>
    <string name="your_result">Your Result</string>
    <string name="year_calender">Year Calender</string>
    <string name="your_syllabus">Your Syllabus</string>
    <string name="notifications">Notifications</string>
    <string name="faculties">Faculties</string>
    <string name="hostel">Hostel</string>
    <string name="examination_application">Examination Application</string>
    <string name="examination">Examination</string>
    <string name="apply_for_examinations">Apply for examinations</string>
    <string name="view_campus_events">View campus events</string>
    <string name="events">Events</string>
    <string name="files">Files</string>
    <string name="access_college_files">Access college files</string>
    <string name="assignment">Assignment</string>
    <string name="registration_no">Registration no.</string>
    <string name="enter_registration_number">Enter Registration number</string>
    <string name="student_biodata">Student Biodata</string>
    <string name="profile_image">Profile Photo</string>
    <string name="student_name_biodata">Student Name</string>
    <string name="email_n_a">Email: N/A</string>
    <string name="phone_n_a">Phone: N/A</string>
    <string name="course_n_a">Course: N/A</string>
    <string name="semester_4">Semester 4</string>
    <string name="semester_2">Semester 2</string>
    <string name="second_semester">Second Semester</string>
    <string name="fourth_semester">Fourth Semester</string>
    <string name="first_semester_result">First Semester Result</string>
    <string name="second_semester_result">Second Semester Result</string>
    <string name="third_semester_result">Third Semester Result</string>
    <string name="fourth_semester_result">Fourth Semester Result</string>
    <string name="your_result_will_be_uploaded_soon">Your Result will be uploaded soon</string>
    <string name="syllabuspdf">SyllabusPdf</string>
    <string name="scroll_view_to_display_pdf_pages">Scroll view to display PDF pages</string>
    <string name="Syllabus">Syllabus</string>
    <string name="syllabus_will_be_shown_here">Syllabus will be shown here</string>
    <string name="your_syllabus_pdf_will_be_displayed_here">Your Syllabus PDF will be displayed here</string>
    <string name="syllabus_container">Syllabus container</string>
    <string name="syllabus_content">Syllabus Content</string>
    <string name="campus_events">Campus Events</string>
    <string name="profile_photo">Profile Photo</string>
</resources>